# cyclops-wearable

./: .git-blame-ignore-revs  .gitignore  PLAN.md  README.md  STATUS.md  demo.py  demo_cycluno.py  plan.md  push_env_config.sh  pyproject.toml  serve.sh
agent/: __init__.py  capabilities.py  cascade.py  compactor.py  config.py  cost.py  learning.py  loop.py  memory.py  models.py  plugins.py  skills.py
android/: README.md  build.gradle  debug.keystore  local.properties  screenshot-smoke.sh  settings.gradle
app/: server.py
brain/: __init__.py  adpcm.py  aikeys.py  bridge.py  context.py  discovery.py  display.py  display_telegram.py  dreams.py  entities.py  experiences.py  extractor.py  factory.py  gguf_backend.py  health.py  hitl.py  http_session.py  hud_bridge.py  llm_extractor.py  oauth_device.py  oauth_store.py  obsidian.py  ota_push.py  pipeline.py  protocol.py  protocol_v2.py  ring_client.py  sightings.py  store.py  transcriber.py
cad/: blender_generate.py  blender_generate.py.bak  cyclops_arduino_enclosure.scad  cyclops_eye.blend  cyclops_eye.blend1  cyclops_fin.blend  cyclops_fin.blend1  cyclops_manta.blend  cyclops_manta.blend1  cyclops_pebble.blend  cyclops_pebble.blend1  cyclops_skeleton.blend  cyclops_tech.blend  cyclops_xiao_enclosure.scad  cyclops_xiao_enclosure_v2.scad  cyclops_xiao_pendant.scad  cyclops_xiao_pendant_v3_antenna.scad  cyclops_xiao_v1_pebble.scad  cyclops_xiao_v2_leaf.scad  cyclops_xiao_v3_gem.scad  cyclops_xiao_v4_temple.scad  cyclops_xiao_variants.scad
device/: battery.py  ble.py  camera.py  cli.py  colmi_r02.py  g2.py  g2_layout.py  gestures.py  health_fuse.py  health_relay.py  omi.py  serial_link.py  simulator.py  transport.py
docs/: 00-superplan.md  01-hardware.md  01-vision-best.md  02-firmware.md  03-brain.md  03-hud-ux-plan.md  04-protocol.md  04-release-v0.4.md  05-testing.md  06-roadmap.md  07-features-omi-g2.md  08-bringup.md  09-compute-host.md  10-form-factor.md  11-pocket-build.md  12-wiring.md  13-premortem.md  14-optics.md  15-cyclops-mini.md  20-premortem-integration.md  21-architecture-v2.md  22-screens-plan.md  23-hud-menu-plan.md  30-agent-design.md  30-colmi-r02-integration.md  30-schematics-xiao.md  31-repremortem-competition.md  31-schematics-arduino.md  32-transparent-oled-151.md  32-wiring.md  33-talon-hud-patterns.md  40-firmware-ota.md  50-cycluno.md  IMPROVEMENT_PLAN.md  _gen_wiring_guide.py  wiring.md  (+1 more)
(+289 files in other folders)
